Labels must be updated for accessibility after text changes.

Bug: 885326
Change-Id: I19764f67b871577d2b8e206800526508bc784fd8
Reviewed-on: https://chromium-review.googlesource.com/1245118
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: Yoshiki Iguchi <yoshiki@chromium.org>
Commit-Queue: Katie Dektar <katie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594610}